refactor: use root vendor paths for tools

--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Convert text to and from base64 instantly. Works offline with no data sent to servers."/>
 <meta property="og:image" content="../../assets/base64-encoder-keyboard.png"/>
 <link rel="canonical" href="https://example.com/tools/base64-encoder/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Base64 Encoder/Decoder","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I encode text?","acceptedAnswer":{"@type":"Answer","text":"Type your text then click encode to get the base64 string."}},{"@type":"Question","name":"Can I decode a base64 string?","acceptedAnswer":{"@type":"Answer","text":"Yes, paste the base64 and click decode to see the original text."}},{"@type":"Question","name":"Is it secure?","acceptedAnswer":{"@type":"Answer","text":"Encoding is done locally so your data never leaves the page."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first visit, the tool runs without internet."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Base64 Encoder/Decoder is free to use."}}]}</script>
 </head>
