--- a/tools/circle-area-calculator/index.html
+++ b/tools/circle-area-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Find disk size from radius or diameter"/>
 <meta property="og:image" content="../../assets/circle-area-calculator-circle.png"/>
 <link rel="canonical" href="https://example.com/tools/circle-area-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Circle Area Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate circle area?","acceptedAnswer":{"@type":"Answer","text":"Enter a radius or diameter, and the calculator shows the area using pi."}},{"@type":"Question","name":"Can I enter the diameter instead?","acceptedAnswer":{"@type":"Answer","text":"Yes, the tool accepts diameter and converts it to radius automatically."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit, the calculator loads from cache without the internet."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Absolutely. You can use the Circle Area Calculator without charge or sign-up."}},{"@type":"Question","name":"Are my numbers stored?","acceptedAnswer":{"@type":"Answer","text":"No values are saved, ensuring your input remains private."}}]}</script>
 </head>
