--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Pick colors and copy codes instantly"/>
 <meta property="og:image" content="../../assets/palette.png"/>
 <link rel="canonical" href="https://example.com/tools/color-picker/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Color Picker","operatingSystem":"Any","applicationCategory":"Design","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I copy a color code?","acceptedAnswer":{"@type":"Answer","text":"Select a color and click the copy button next to the value you need."}},{"@type":"Question","name":"What formats are shown?","acceptedAnswer":{"@type":"Answer","text":"The picker displays HEX, RGB and HSL values for each color."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the color picker functions without an internet connection."}},{"@type":"Question","name":"Is my selection stored?","acceptedAnswer":{"@type":"Answer","text":"No information is saved; everything runs locally in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"The Color Picker is completely free to use."}}]}</script>
 </head>
