--- a/tools/compound-interest-calculator/index.html
+++ b/tools/compound-interest-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="See savings grow with compound interest"/>
 <meta property="og:image" content="../../assets/compound-interest-chart.png"/>
 <link rel="canonical" href="https://example.com/tools/compound-interest-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Compound Interest Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How is compound interest calculated?","acceptedAnswer":{"@type":"Answer","text":"Enter principal, rate, times per year, and years; the calculator computes total using the standard formula."}},{"@type":"Question","name":"Can I see the final balance?","acceptedAnswer":{"@type":"Answer","text":"Yes, it displays both interest earned and final balance."}},{"@type":"Question","name":"Is this tool free?","acceptedAnswer":{"@type":"Answer","text":"The calculator is free and works offline."}},{"@type":"Question","name":"Does it support monthly compounding?","acceptedAnswer":{"@type":"Answer","text":"Set compounding to 12 to calculate monthly."}},{"@type":"Question","name":"Are my inputs saved anywhere?","acceptedAnswer":{"@type":"Answer","text":"No, all data stays in your browser."}}]}</script>
 </head>
