--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Measure the days between any two dates"/>
 <meta property="og:image" content="../../assets/date-diff-calendar.png"/>
 <link rel="canonical" href="https://example.com/tools/date-difference-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Date Difference Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I find days between two dates?","acceptedAnswer":{"@type":"Answer","text":"Select a start and end date to instantly see the number of days in between."}},{"@type":"Question","name":"Can I use past and future dates?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can calculate differences for any pair of dates."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the calculator runs completely in your browser."}},{"@type":"Question","name":"Is my date information stored?","acceptedAnswer":{"@type":"Answer","text":"No information leaves your device; everything is calculated locally."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, this tool is free for unlimited use."}}]}</script>
 </head>
