--- a/tools/dice-roller/index.html
+++ b/tools/dice-roller/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Roll dice with animation and copy results"/>
 <meta property="og:image" content="../../assets/dice-die.png"/>
 <link rel="canonical" href="https://example.com/tools/dice-roller/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Dice Roller","operatingSystem":"Any","applicationCategory":"Game","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I roll the dice?","acceptedAnswer":{"@type":"Answer","text":"Click the roll button and the dice image will show a random value."}},{"@type":"Question","name":"Can I roll multiple dice?","acceptedAnswer":{"@type":"Answer","text":"Press roll again to simulate tossing several dice and sum the results."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the Dice Roller functions without internet."}},{"@type":"Question","name":"Is my result stored?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; each roll happens purely in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This Dice Roller is completely free to use."}}]}</script>
 </head>
