--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -11,16 +11,16 @@
 <meta property="og:description" content="Edit Markdown and see the result instantly"/>
 <meta property="og:image" content="../../assets/markdown-editor-pencil.png"/>
 <link rel="canonical" href="https://example.com/tools/markdown-editor/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
-<script defer src="/../../vendor/cdn/marked.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/marked.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Markdown Editor","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Markdown Editor?","acceptedAnswer":{"@type":"Answer","text":"Type Markdown on the left and the formatted HTML preview updates as you write."}},{"@type":"Question","name":"Does it save my text?","acceptedAnswer":{"@type":"Answer","text":"No, your notes stay local and disappear when you close the tab."}},{"@type":"Question","name":"Can I copy the HTML?","acceptedAnswer":{"@type":"Answer","text":"Yes, click the copy button under the preview to copy the rendered markup."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This editor is free for personal and professional projects."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit it loads from cache and works offline."}}]}</script>
 </head>
