--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Estimate paint requirements for your space"/>
 <meta property="og:image" content="../../assets/palette.png"/>
 <link rel="canonical" href="https://example.com/tools/paint-coverage-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Paint Coverage Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Paint Coverage Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter the wall area and coverage per gallon to find out how many gallons are needed."}},{"@type":"Question","name":"Does it account for multiple coats?","acceptedAnswer":{"@type":"Answer","text":"Yes, specify the number of coats and the total is adjusted."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Absolutely, the tool is free and works offline."}},{"@type":"Question","name":"Are my values saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored or sent anywhere."}},{"@type":"Question","name":"Can I change units?","acceptedAnswer":{"@type":"Answer","text":"The calculator uses square feet but you can convert units with the Unit Converter."}}]}</script>
 </head>
