--- a/tools/pomodoro-timer/index.html
+++ b/tools/pomodoro-timer/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Work in focused intervals"/>
 <meta property="og:image" content="../../assets/pomodoro-timer-tomato.png"/>
 <link rel="canonical" href="https://example.com/tools/pomodoro-timer/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Pomodoro Timer","operatingSystem":"Any","applicationCategory":"Productivity","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start a Pomodoro?","acceptedAnswer":{"@type":"Answer","text":"Press start to begin a 25-minute session. After it ends, take a short break."}},{"@type":"Question","name":"Can I change the timer length?","acceptedAnswer":{"@type":"Answer","text":"Yes, adjust the work and break durations before starting."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the timer runs without internet."}},{"@type":"Question","name":"Will it alert me when time is up?","acceptedAnswer":{"@type":"Answer","text":"Yes, it plays a beep and shows a message when the session ends."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No personal data is stored; settings remain in the browser only."}}]}</script>
 </head>
