--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Pick random numbers instantly"/>
 <meta property="og:image" content="../../assets/dice-die.png"/>
 <link rel="canonical" href="https://example.com/tools/random-number-generator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Random Number Generator","operatingSystem":"Any","applicationCategory":"Utility","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
