--- a/tools/time-zone-converter/index.html
+++ b/tools/time-zone-converter/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Compare times across time zones"/>
 <meta property="og:image" content="../../assets/time-zone-converter-clock.png"/>
 <link rel="canonical" href="https://example.com/tools/time-zone-converter/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Time Zone Converter","operatingSystem":"Any","applicationCategory":"Utilities","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert times?","acceptedAnswer":{"@type":"Answer","text":"Select the source zone, the target zone and a time to see the converted value."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, after the first visit you can use it without internet."}},{"@type":"Question","name":"Can I search for cities?","acceptedAnswer":{"@type":"Answer","text":"Use the built-in list to pick common cities quickly."}},{"@type":"Question","name":"Is daylight saving handled?","acceptedAnswer":{"@type":"Answer","text":"Yes, the browser's time zone data automatically includes daylight changes."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"The tool is free and stores no personal data."}}]}</script>
 </head>
