--- a/tools/tip-calculator/index.html
+++ b/tools/tip-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Calculate tips and split bills quickly"/>
 <meta property="og:image" content="../../assets/tip-calculator-money.png"/>
 <link rel="canonical" href="https://example.com/tools/tip-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Tip Calculator","operatingSystem":"Any","applicationCategory":"FinancialApplication","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How does the Tip Calculator work?","acceptedAnswer":{"@type":"Answer","text":"Enter your bill amount, choose a tip percentage and the number of people splitting the bill. The calculator instantly shows each person's share."}},{"@type":"Question","name":"Is it suitable for group dining?","acceptedAnswer":{"@type":"Answer","text":"Yes. It divides the total including gratuity among diners so everyone pays their fair share."}},{"@type":"Question","name":"Can it handle custom tip rates?","acceptedAnswer":{"@type":"Answer","text":"Absolutely. You can enter any percentage to match local service customs or your own preference."}},{"@type":"Question","name":"Does it store my data?","acceptedAnswer":{"@type":"Answer","text":"No information is saved. Everything is calculated in your browser for privacy."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the initial load the page works without an internet connection."}}]}</script>
 </head>
