--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Find your exact age in years"/>
 <meta property="og:image" content="../../assets/age-calculator-cake.png"/>
 <link rel="canonical" href="https://example.com/tools/age-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Age Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my age?","acceptedAnswer":{"@type":"Answer","text":"Enter your birthdate and the tool displays your age automatically."}},{"@type":"Question","name":"Is the Age Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, it is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first load, you can use the calculator without internet."}},{"@type":"Question","name":"Is my birthdate stored?","acceptedAnswer":{"@type":"Answer","text":"No data is saved; everything runs in your browser."}},{"@type":"Question","name":"Can I calculate someone else's age?","acceptedAnswer":{"@type":"Answer","text":"Yes, just enter any valid birthdate to get the age."}}]}</script>
 </head>
