--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Check your body mass index"/>
 <meta property="og:image" content="../../assets/bmi-calculator-scale.png"/>
 <link rel="canonical" href="https://example.com/tools/bmi-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"BMI Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the BMI Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter your height and weight then press calculate to see your BMI."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the BMI Calculator is free and works offline."}},{"@type":"Question","name":"Are my numbers saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; everything is processed in your browser."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"Enter weight in kilograms and height in centimeters."}},{"@type":"Question","name":"What is a healthy BMI range?","acceptedAnswer":{"@type":"Answer","text":"A BMI between 18.5 and 24.9 is generally considered healthy."}}]}</script>
 </head>
