--- a/tools/bmr-calculator/index.html
+++ b/tools/bmr-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Estimate daily calorie needs"/>
 <meta property="og:image" content="../../assets/bmr-calculator-fire.png"/>
 <link rel="canonical" href="https://example.com/tools/bmr-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"BMR Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate BMR?","acceptedAnswer":{"@type":"Answer","text":"Enter your gender, weight, height and age then press calculate."}},{"@type":"Question","name":"Which formula is used?","acceptedAnswer":{"@type":"Answer","text":"This tool uses the Mifflin-St Jeor equation for accuracy."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once the page loads you can use it without internet."}},{"@type":"Question","name":"Are my numbers stored?","acceptedAnswer":{"@type":"Answer","text":"No data is saved or sent anywhere."}},{"@type":"Question","name":"Can I switch units?","acceptedAnswer":{"@type":"Answer","text":"Currently inputs are in metric units for simplicity."}}]}</script>
 </head>
