--- a/tools/currency-converter/index.html
+++ b/tools/currency-converter/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Convert between USD, EUR and GBP"/>
 <meta property="og:image" content="../../assets/currency-converter-money.png"/>
 <link rel="canonical" href="https://example.com/tools/currency-converter/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Currency Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert currencies?","acceptedAnswer":{"@type":"Answer","text":"Enter an amount, choose currencies and press convert."}},{"@type":"Question","name":"Are rates live?","acceptedAnswer":{"@type":"Answer","text":"This demo uses static rates so it also works offline."}},{"@type":"Question","name":"Can I add more currencies?","acceptedAnswer":{"@type":"Answer","text":"Currently USD, EUR and GBP are included for simplicity."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, there are no costs or tracking involved."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, conversion happens locally after the first load."}}]}</script>
 </head>
