--- a/tools/discount-calculator/index.html
+++ b/tools/discount-calculator/index.html
@@ -11,15 +11,15 @@
 <meta property="og:description" content="Calculate sale prices and savings"/>
 <meta property="og:image" content="../../assets/discount-label.png"/>
 <link rel="canonical" href="https://example.com/tools/discount-calculator/" />
-<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/../../vendor/cdn/aos.js"></script>
+<script defer src="/vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Discount Calculator","operatingSystem":"Any","applicationCategory":"FinancialApplication","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Discount Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter the original price and the discount percentage to see the final cost."}},{"@type":"Question","name":"Can I enter any percent off?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can use any whole or decimal percentage to match store discounts."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit, the calculator runs entirely in your browser without a connection."}},{"@type":"Question","name":"Will it show how much I save?","acceptedAnswer":{"@type":"Answer","text":"The calculator displays both the amount saved and the new sale price."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Discount Calculator is completely free and saves no personal data."}}]}</script>
 </head>
